--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,8 +4,9 @@
   },
   "env": {
     "browser": true,
-    "es2021": true
-  },
+    "amd": true,
+    "node": true
+},
   "extends": ["eslint:recommended"],
   "rules": {
     "no-console": "off"
