--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,25 @@
 {
-  "parserOptions": {
-    "ecmaVersion": 2021
-  },
   "env": {
     "browser": true,
-    "amd": true,
-    "node": true
-},
-  "extends": ["eslint:recommended"],
+    "es6": true,
+    "jest": true
+  },
+  "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaVersion": 2018,
+    "sourceType": "module"
+  },
+  "extends": ["airbnb-base"],
   "rules": {
-    "no-console": "off"
-  }
+    "no-shadow": "off",
+    "no-param-reassign": "off",
+    "eol-last": "off",
+    "import/extensions": [ 1, {
+      "js": "always", "json": "always"
+    }]
+  },
+  "ignorePatterns": [
+    "dist/",
+    "build/"
+  ]
 }
