--- a/package.json
+++ b/package.json
@@ -4,30 +4,21 @@
   "description": "Awsome book by plain Js",
   "main": "main.js",
   "scripts": {
-
-  }
-  ,
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "^8.41.0";
-    ,
-    "eslint-config-airbnb-base": "^15.0.0";
-    ,
-    "eslint-plugin-import": "^2.27.5";
-    ,
-    "eslint-plugin-react": "^7.32.2";
-    ,
-    "hint": "^7.1.8";
-    ,
-    "stylelint": "^13.13.1";
-    ,
-    "stylelint-config-standard": "^21.0.0";
-    ,
-    "stylelint-csstree-validator": "^1.9.0";
-    ,
-    "stylelint-scss": "^3.21.0";
+    "eslint": "^8.41.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-react": "^7.32.2",
+    "hint": "^7.1.8",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "^3.21.0"
   }
 }
